   has the same functionality as the disk version, but boots faster.
 * forth: removed gfx from standard modules
 * forth: dropped all usage of BASIC (including float module)
 * forth: moved rarely used words to compat module
 * asm: renamed zptmp zptmp2 zptmp3 => w w2 w3
 * asm: renamed sp0 sp1 => lsb msb
 * gfx: moved bitmap graphics area from $8c00-$8fff, $a000-$bfff
   to $cc00-$cfff, $e000-$ffff
 * doc: expanded assembler documentation
 * editor: removed fg

2016-02-10: v1.6.1

 * forth: evaluate failed for strings that ended at page boundary
 * forth: print error in case include fails
 * forth: space optimize of
 * forth: moved 2over, 2swap to compat
 * cart: made cartridge boot faster
 * cart: use Simons' Basic cart type to make $a000-$bfff RAM
 * editor: starting without filename now doesn't read from disk
 * editor: :w on unnamed buffer now prints "no filename"

2017-08-03: v1.6.2

 * forth: various see improvements
 * forth: moved >body to compat

2017-10-07: v1.6.3

 * bring back float module

2018-04-22: v1.6.4

 * forth: INCLUDED now interprets the file
 * forth: added ?DO
 * forth: added DEFER DEFER! IS to compat
 * forth: made loadb return address after last written byte
 * debug: made see show branch

2018-10-24: v1.6.5

 * editor: fixed dd crash at end of buffer
 * editor: slower key repeat settings
 * editor: made f7 work in insert mode

2019-05-12: v1.6.6

[Changed]
 * sprite: sp-data now use . instead of bl to set 0 bits
 * forth: accept now reads keyboard only
[Fixed]
 * sprite: sp-on, sp-off had inverted sprite number
 * gfx: text now supports upper/lower case

2019-05-20: v1.6.7

[Fixed]
 * include, included would clobber the text input buffer.

2019-05-22: v1.6.8

[Changed]
 * when parsing, treat shift+space like space. it used to
   be like this but accidentally (?) changed in 1.6.0.

UNRELEASED

[Changed]
 * startup base is now decimal instead of hex.
[Added]
 * BYE
[Fixed]
 * vi: / was broken when searching for a single character.